APB-11722 Agent assurance cleanup - remove api endpoints (#154)
* remove get agency details

* remove agency record with checks

* remove verify-entity

* remove entity check service

* Remove endpoints openapi

* remove references to endpoints in readme/mermaid diagrams

* removed unused files

* increase code coverage
